syntax = "proto3";

option go_package = "proto/auth";

import "google/protobuf/empty.proto";

service AuthService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Authenticate(google.protobuf.Empty) returns (AuthenticateResponse);
}

message SignUpRequest {
    uint32 id = 1;
    string username = 2;
    string password = 3;
    uint32 role = 4;
}

message SignUpResponse {
    string status = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string username = 1;
    string token = 2;
    uint32 id = 3;
    uint32 role = 4;
}

message AuthenticateResponse {
    uint32 id = 1;
    string username = 2;
    string password = 3;  
    uint32 role = 4;
}
